# MPZRPC

./: CMakeLists.txt  README.md  autobuild.sh
examples/: service1.pb.cc  service1.pb.h  service1.proto
examples/callee/: CMakeLists.txt  provider.cpp  zookeeper.cpp
examples/caller/: CMakeLists.txt  consumer.cpp
lib/include/: logger.hpp  logqueue.hpp  mprpcapplication.hpp  mprpcchannel.hpp  mpzrpcapplication.hpp  mpzrpcconfig.hpp  mpzrpccontroller.hpp  mpzrpcprovider.hpp  mpzrpcrequesthead.pb.h  zkutil.hpp
src/: logger.cpp  mpzrpcapplication.cpp  mpzrpcchannel.cpp  mpzrpcconfig.cpp  mpzrpccontroller.cpp  mpzrpcprovider.cpp  mpzrpcrequesthead.pb.cc  mpzrpcrequesthead.proto  zkutil.cpp
test/protobuf/: main  main.cpp  test.pb.cc  test.pb.h  test.proto
